5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_842.log
== TEST (2019-03-24 17:01:25) 
-- CODE:
var= int(input("digite um numero:"))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:02:18) 
-- CODE:
varA= int(input("digite um numero:"))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:02:54) 
-- CODE:
varA= int(input("digite um numero:"))
varB=A//1000


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    varB=A//1000
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:03:49) 
-- CODE:
a= int(input("digite um numero:"))
b=a//1000
B=a%1000


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    varB=A//1000
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:04:44) 
-- CODE:
a= int(input("leia um numero inteiro de quatro digitos:"))
b=a//1000
B=a%1000


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    varB=A//1000
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:05:49) 
-- CODE:
a= int(input("leia um numero inteiro de quatro digitos:"))
b=a//1000
B=a%1000
c=B//100
C=B%100
d=


-- ERROR:
File "XXXX", line 6
    d=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:06:57) 
-- CODE:
a= int(input("leia um numero inteiro de quatro digitos:"))
b=a//1000
B=a%1000
c=B//100
C=B%100
d=C//10
D=C%10
e=D//1
E


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    E
NameError: name 'E' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:08:16) 
-- CODE:
a= int(input("leia um numero inteiro de quatro digitos:"))
b=a//1000
B=a%1000
c=B//100
C=B%100
d=C//10
D=C%10
e=D//1
E=D%1
soma=(b+c+d+e)
print(soma)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:08:35) 
-- CODE:
a= int(input("leia um numero inteiro de quatro digitos:"))
b=a//1000
B=a%1000
c=B//100
C=B%100
d=C//10
D=C%10
e=D//1
E=D%1
soma=(b+c+d+e)
print(soma)

-- EXECUTION TIME:
0.194282
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
